--- a/TSM/tsm-main/package.json
+++ b/TSM/tsm-main/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "server": "nodemon server.js",
+    "client": "npm run dev --parcel ./react",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "proxy": "http://localhost:3000",
   "keywords": [],
@@ -29,7 +37,19 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "body-parser": "^1.19.2",
+    "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-async-await": "^1.1.0",
+    "express-async-handler": "^1.2.0",
+    "google-distance-matrix": "^1.1.1",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
+    "react-google-maps": "^9.4.5",
+    "git": "^0.1.5"
   },
   "devDependencies": {
     "typescript": "^4.6.3"
@@ -38,3 +58,10 @@
     "git": "^0.1.5"
   }
 },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  },
+
